# meal-planner-ai-mcp

./: .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/mcp/: server-card.json
meal_planner_ai_mcp/: server.py
