[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meal-planner-ai-mcp"
version = "0.1.0"
description = "Generate weekly meal plans with macro targets and dietary preference support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
meal_planner_ai_mcp = "meal_planner_ai_mcp.server:main"
