[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meal-planner-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Meal Planner tools for AI agents and LLMs"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "meal-planning", "nutrition", "recipe", "diet-planning", "food"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/meal-planner-ai-mcp"
Documentation = "https://meok.ai/docs/meal-planner-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/meal-planner-ai-mcp/issues"
